--- a/web-frontend/build.gradle
+++ b/web-frontend/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
 
-    implementation project(':sdim2087-backend')
+    implementation project(':backend')
 }
 
 def deploymentName = 'web'
